src/scss/_components.scss
/* CURRENT DAY */
.current-day {
  &__container {
    display: flex;
    justify-content: space-between;

    @include respond(laptop) {
      flex-direction: column;
    }
  }

  // current day summary box (LEFT SIDE)
  &__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;

    @include respond(laptop) {
      margin-bottom: 2rem;
    }
  }

  &__summary {
    padding: 1.6vw 3.2vw;
    box-shadow: $shadow;
    border-radius: $radius;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 33%;
    margin-right: 3rem;
    background: linear-gradient(
        -225deg,
        rgba(#cbbacc, 0.85) 0%,
        rgba(#2580b3, 0.85) 100%
      ),
      url("../img/bg.jpg") center no-repeat;
    background-size: cover;

    @include respond(laptop) {
      margin-bottom: 3rem;
      padding: 3rem;
      width: 100%;
      background-position: 50% 40%;
    }

    @include respond(tab-small) {
      height: 50vh;
    }
    @include respond(phone) {
      height: 60vh;
    }
  }

  &__forecast {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  &__date {
    margin: 0;
  }

  &__img {
    transform: scale(1.5);

    @include respond(tab-port) {
      transform: scale(2);
    }

    @include respond(phone) {
      margin-right: 2rem;
      transform: scale(3);
    }
  }

  &__desc {
    // typography
    font-weight: 300;
    font-size: 3rem;
    margin: 0;
    margin-top: -1rem;

    @include respond(tab-small) {
      font-size: 1.5rem;
    }
  }

  // current day info (RIGHT SIDE)
  &__info {
    display: flex;
    flex-direction: column;
    // width: 50vw;
  }

  // statistics
  &__statistics {
    display: flex;
    justify-content: space-between;
    margin-bottom: 3rem;
  }

  &__stat {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;

    box-shadow: $shadow;
    border-radius: $radius;
    padding: 3.2vw;
    width: 33.3333%;

    &:not(:last-child) {
      margin-right: 3rem;
    }

    @include respond(tab-port) {
      &:not(:last-child) {
        margin-right: 1rem;
      }
    }
  }

  &__stat-head {
    @include respond(tab-port) {
      margin-bottom: 0.5rem;
    }
  }

  &__stat-desc {
    margin: 0;
  }

  // hourly forecast
  &__hourly {
    display: flex;
    justify-content: space-between;
    box-shadow: $shadow;
    border-radius: $radius;
    // overflow: hidden;
    padding: 2.4vw 1.6vw;
    overflow-x: auto;

    @include respond(laptop) {
      padding: 2.4vw;
    }

    @include respond(tab-port) {
      padding: 2rem 0;
      box-shadow: none;
      border-radius: 0;
      border-top: 3px solid rgba(#fff, 0.3);
      border-bottom: 3px solid rgba(#fff, 0.3);
      position: relative;
    }
  }

  &__hourly-forecast {
    text-align: center;
    &:not(:last-child) {
      margin-right: 1rem;
    }

    @include respond(tab-small) {
      &:not(:last-child) {
        margin-right: 3rem;
      }
    }
  }

  &__hour-icon {
  }
}

/* UPCOMING WEATHER */
.upcoming-weather {
  h3 {
    margin-bottom: 2rem;
  }
  &__container {
    // padding: 2rem;
    display: flex;
    justify-content: space-between;

    @include respond(tab-small) {
      flex-direction: column;
    }
  }
  &__forecast {
    // flex: 0 0 9vw;
  }

  // upcoming day box
  &__box {
    border-radius: $radius;
    box-shadow: $shadow;
    padding: 1.6vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;

    @include respond(laptop) {
      padding: 1.4vw;
    }
    @include respond(tab-land) {
      padding: 2vw;
    }
    @include respond(tab-port) {
      padding: 0;
    }

    @include respond(tab-small) {
      flex-direction: row;
      align-items: center;
      justify-content: space-around;
      margin-bottom: 1rem;
      padding: 0;
    }
  }

  &__icon {
  }

  &__temp {
    margin-left: 1rem;
    @include respond(tab-small) {
      order: 1;
    }
  }

  &__day {
    @include respond(tab-small) {
      order: -1;
    }
  }
}

/* ICON */
.icon {
  // width: 10rem;
  // height: 10rem;
  width: 6vw;
  height: 6vw;

  filter: invert(100%) sepia(0%) saturate(2498%) hue-rotate(39deg)
    brightness(113%) contrast(87%) opacity(0.8);

  @include respond(tab-land) {
    width: 8vw;
    height: 8vw;
  }
}

.data-refresh {
  display: inline-block;
  margin-left: 1.5rem;
  height: 2rem;
  width: 2rem;
  cursor: pointer;
  transition: 0.2s all;

  &:hover,
  &:active {
    transform: rotate(360deg) scale(1.05);
  }
}

/* BOX */

.skeleton-loader {
  animation: fade-in 1s ease-out forwards;
  opacity: 0;

  position: relative;
  overflow: hidden;
  &::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: #cbbacc;
    z-index: 2;
  }
  &::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-image: linear-gradient(
      -225deg,
      rgba(#cbbacc, 0.8) 0%,
      rgba(#2580b3, 0.8) 100%
    );
    z-index: 3;
    opacity: 0;
    // transform: translateX(-100%);
    animation: skeleton-loader 2s infinite ease-in-out 1s;
  }
}

